Fix issue where highlighted objects could cause a line break in print mode.

--- a/quarto/qfc_styles.css
+++ b/quarto/qfc_styles.css
@@ -163,8 +163,9 @@
   code b
   {
     background-color: rgb(255,255,100);
-    padding: 2px;
-    margin: -2px;
+    box-shadow: 0 0 0 2px rgb(255,255,100);
+/*    padding: 2px;
+    margin: -2px; */
     border-radius: 4px;
   }
   /* highlighting on in-page object that is linked to */
